[tool.poetry]
name = "sdss-flicamera"
version = "0.1.2"
description = "A library to control Finger Lakes Instrumentation cameras."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/flicamera"
repository = "https://github.com/sdss/flicamera"
documentation = "https://sdss-flicamera.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "flicamera" }
]
include = [
    {path = "flicamera/etc/*"},
    {path = "cextern/**/*"},
    {path = "LICENSE.md"},
    {path = "flicamera/*.so", format = "wheel"}
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.scripts]
flicamera = "flicamera.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.4"
sdss-basecam = "^0.3.0"
sdsstools = ">=0.4.0"
daemonocle = "^1.0.2"
click_default_group = "^1.2.2"
nest_asyncio = "^1.4.0"
Sphinx = {version="~3.2.0", optional=true}
sphinx-copybutton = {version="^0.3.1", optional=true}
m2r2 = {version="^0.2.5", optional=true}
sphinx-click = {version="^2.3.0", optional=true}

[tool.poetry.dev-dependencies]
ipython = ">=7.9.0"
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
taskipy = ">=1.1.2"
autopep8 = "^1.5.4"
Sphinx = "~3.2.0"
sphinx-copybutton = "^0.3.1"
m2r2 = "^0.2.5"
sphinx-click = "^2.3.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-copybutton", "m2r2", "sphinx-click"]

[tool.taskipy.tasks]
deploy = "python create_setup.py && poetry build && poetry publish"

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = ["flicamera"]
known_sdss = ["clu", "sdsstools", "basecam"]
# multi_line_output = false
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov flicamera --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["flicamera/*"]
omit = [
    "*/__init__.py",
    "*/__main__.py",
    "*/actor.py"
]

# [tool.coverage.report]
# exclude_lines = [
# ]

[build-system]
# Add setuptools so that we can do pip install -e . after running create_setup.py
requires = ["poetry-core>=1.0.0", "setuptools>=46.0.0"]
build-backend = "poetry.core.masonry.api"
