[tool.poetry]
name = "sdss-flicamera"
version = "0.4.0"
description = "A library to control Finger Lakes Instrumentation cameras."
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/flicamera"
repository = "https://github.com/sdss/flicamera"
documentation = "https://sdss-flicamera.readthedocs.io/en/latest/"
keywords = ["astronomy", "software"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "flicamera" }
]
include = [
    {path = "flicamera/etc/*"},
    {path = "cextern/**/*", format='sdist'},
    {path = "flicamera/*.so", format = "wheel"}
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.scripts]
flicamera = "flicamera.__main__:main"

[tool.poetry.dependencies]
python = "^3.7,<4.0"
numpy = "^1.17.4"
sdss-basecam = "^0.6.2"
# sdss-basecam = {git = "https://github.com/sdss/basecam.git", branch = "main"}
sdsstools = ">=0.4.0"
click_default_group = "^1.2.2"
photutils = "^1.0.2"
astropy = [
    {version = "^4.2", python = ">=3.7,<3.10"},
    {version = "^5.0", python = ">=3.10"}
]
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
ipython = [
    {version = ">=8.0.0", python = ">=3.8"},
    {version = ">=7.0.0", python = ">=3.7,<3.8"}
]
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
taskipy = ">=1.1.2"
autopep8 = ">=1.5.4"
Sphinx = ">=4.0.0"
sphinx-copybutton = ">=0.3.1"
sphinx-click = ">=2.3.0"
black = {version = ">=20.8b1", allow-prereleases = true}
myst-parser = {version = ">=0.14.0"}
furo = ">=2021.7.5-beta.38"

[tool.black]
line-length = 88
target-version = ['py38']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "archon"
known_typing = ["typing"]
known_sdss = ["sdsstools", "clu", "basecam"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov flicamera --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["flicamera/*"]
omit = [
    "*/__init__.py",
    "flicamera/__main__.py",
    "flicamera/actor.py",
    "flicamera/mock.py"
]

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"
