[project]
name = "sdss-flicamera"
version = "0.7.3a1"
description = "A library to control Finger Lakes Instrumentation cameras."
authors = [
    {name = "José Sánchez-Gallego", email = "gallegoj@uw.edu"}
]
license = "BSD-3-Clause"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "sdss-basecam>=0.8.2",
    "sdsstools>=1.9.2",
    "click_default_group>=1.2.2",
    "photutils>=1.2.0",
    "scipy>=1.9.0"
]

[project.urls]
Homepage = "https://github.com/sdss/flicamera"
Repository = "https://github.com/sdss/flicamera"
Documentation = "https://sdss-flicamera.readthedocs.io/en/latest/"

[project.scripts]
flicamera = "flicamera.__main__:main"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "matplotlib>=3.1.1",
    "doc8>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0",
    "ipdb>=0.12.3",
    "taskipy>=1.1.2",
    "Sphinx>=4.0.0",
    "sphinx-copybutton>=0.3.1",
    "sphinx-click>=2.3.0",
    "myst-parser>=0.14.0",
    "furo>=2025.9.25",
    "setuptools>=80.9.0",
    "ruff>=0.14.3",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["flicamera"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu", "basecam"]

[tool.pytest.ini_options]
addopts = "--cov flicamera --cov-report xml --cov-report html --cov-report term"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["flicamera/*"]
omit = [
    "*/__init__.py",
    "flicamera/__main__.py",
    "flicamera/actor.py",
    "flicamera/mock.py"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["flicamera*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
flicamera = ["etc/*", "cextern/**/*"]

[tool.setuptools.exclude-package-data]
"flicamera.cextern" = ["*.pdf"]
